<resources>
    <string name="app_name">Conceal</string>
    <string name="choose_input_image">choose input image</string>
    <string name="choose_wave_file_label">Open a wave file or record something</string>
    <string name="click_to_choose_input_image">Tap to choose input image</string>
    <string name="select_image_title">Select Image</string>
    <string name="select_audio_title">Select Audio</string>
    <string name="hold_to_start_recording_tooltip">Record an audio</string>
    <string name="select_image_tooltip">Select image</string>
    <string name="select_audio_file_tooltip">Select audio file</string>
    <string name="click_to_open_file">Tap to open file</string>
    <string name="main_title">Conceal audio inside image</string>
    <string name="percentage_persian_placeholder">٪%1$3.0f</string>
    <string name="percentage">percent</string>
    <string name="input_image">input image</string>
    <string name="output_image">output image</string>
    <string name="choose">Choose</string>
    <string name="please_cancel_first">A progress is ongoing already, please ensure it is cancelled first</string>
    <string name="cancel">Cancel</string>
    <string name="empty_recording_list">Recording list is empty</string>
    <string name="empty" />
    <string name="cd_input_image">input image</string>
    <string name="cd_output_image">output image</string>
    <string name="cd_select_input_image">select input image</string>
    <string name="cd_select_input_audio">select input audio</string>
    <string name="cd_from_1_to_2">from input to output</string>
    <string name="cd_start_recording">start recording</string>
    <string name="cd_green_check">green check</string>
    <string name="saving">saving</string>
    <string name="data_exceeds">Audio data exceeds image dimensions</string>
    <string name="data_exceeds_on_index">data exceeds on index %1$d</string>
    <string name="data_cannot_be_parsed_on_index">data cannot be parsed after index %1$d</string>
    <string name="illegal_number_of_channels">illegal number of channels</string>
    <string name="number_of_frames_must_be_positive">number of frames must be positive</string>

    <string name="illegal_number_of_valid_bits">illegal number of valid bits</string>
    <string name="sample_rate_must_be_positive">sample rate must be positive</string>
    <string name="not_enough_wav_file_bytes_for_header">not enough wav file bytes for header</string>
    <string name="invalid_wav_header_data_incorrect_riff_chunk_id">invalid wav header data incorrect riff chunk id</string>
    <string name="invalid_wav_header_data_incorrect_riff_type_id">invalid wav header data incorrect riff type id</string>
    <string name="header_chunk_size_does_not_match_file_size_">header chunk size does not match file size </string>
    <string name="reached_end_of_file_without_finding_format_chunk">reached end of file without finding format chunk</string>
    <string name="could_not_read_chunk_header">could not read chunk header</string>
    <string name="compression_code_not_supported">compression code not supported</string>
    <string name="number_of_channels_specified_in_header_is_equal_to_zero">number of channels specified in header is equal to zero</string>
    <string name="block_align_specified_in_header_is_equal_to_zero">block align specified in header is equal to zero</string>
    <string name="valid_bits_specified_in_header_is_less_than_2">valid bits specified in header is less than 2</string>
    <string name="valid_bits_specified_in_header_is_greater_than_64">valid bits specified in header is greater than 64</string>
    <string name="block_align_does_not_agree_with_bytes_required_for_validbits_and_number_of_channels">block align does not agree with bytes required for validbits and number of channels</string>
    <string name="data_chunk_found_before_format_chunk">data chunk found before format chunk</string>
    <string name="data_chunk_size_is_not_multiple_of_block_align">data chunk size is not multiple of block align</string>
    <string name="did_not_find_a_data_chunk">did not find a data chunk</string>
    <string name="not_enough_data_available">not enough data available</string>
    <string name="output_wave_path">output wave path</string>
    <string name="select_carrier_image_tooltip">select carrier image</string>
    <string name="cd_output_audio_path">output wave path</string>
    <string name="data_size_does_not_match">data size does not match</string>
    <string name="no_input_set">No parsing progress applied</string>
    <string name="please_insert_first">There is an unsaved progress. Please press back again to exit.</string>
    <string name="network_error">network error</string>
    <string name="share">share</string>
    <string name="send_to">send to</string>
    <string name="error_in_parsing_image">error in parsing image</string>
    <string name="sharing_hint">Please note: Some social media applications like Telegram and Instagram change the content of images and re-compress them before sending. Sharing the resulting image to those applications would probably remove audio data that is concealed inside the image. We suggest sending the resulting image on Telegram as un-compressed file instead of photo.\n\nWhen no solution is available, you can upload your image to an image hosting website for sharing. Sending them as email attachment is known to keep the original data. Removing any meta-data from the image does not break the concealing process.</string>
</resources>
