<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="ir.mrahimy.conceal.ui.home.MainActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        tools:context=".ui.home.MainActivity">

        <com.cleveroad.audiovisualization.GLAudioVisualizationView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/visualizer_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:av_bubblesSize="24dp"
            app:av_bubblesRandomizeSizes="true"
            app:av_wavesHeight="64dp"
            app:av_wavesFooterHeight="48dp"
            app:av_wavesCount="7"
            app:av_layersCount="2"
            app:av_backgroundColor="@color/av_color_bg"
            app:av_bubblesPerLayer="16"
            />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_horizontal"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_input_image_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/input_image"
            app:layout_constraintBottom_toTopOf="@id/input_img"
            app:layout_constraintEnd_toEndOf="@id/input_img"
            app:layout_constraintStart_toStartOf="@id/input_img"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_output_image_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/output_image"
            app:layout_constraintBottom_toTopOf="@id/output_img"
            app:layout_constraintEnd_toEndOf="@id/output_img"
            app:layout_constraintStart_toStartOf="@id/output_img"
            app:layout_constraintTop_toTopOf="parent" />

        <ir.mrahimy.conceal.cv.CameraCorner
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:isGone="@{!vm.isOutputHintVisible}"
            app:layout_constraintBottom_toBottomOf="@id/output_img"
            app:layout_constraintEnd_toEndOf="@id/output_img"
            app:layout_constraintStart_toStartOf="@id/output_img"
            app:layout_constraintTop_toTopOf="@id/output_img" />

        <TextView
            android:id="@+id/output_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:gravity="center_horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@{vm.outputImageLabel}"
            app:isGone="@{!vm.isOutputHintVisible}"
            app:layout_constraintBottom_toBottomOf="@id/output_img"
            app:layout_constraintEnd_toEndOf="@id/output_img"
            app:layout_constraintStart_toStartOf="@id/output_img"
            tools:text="@string/choose_wave_file_label" />

        <ImageView
            android:id="@+id/output_placeholder"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/image"
            app:isGone="@{!vm.isOutputHintVisible}"
            app:layout_constraintBottom_toTopOf="@id/output_label"
            app:layout_constraintEnd_toEndOf="@id/output_img"
            app:layout_constraintStart_toStartOf="@id/output_img"
            app:layout_constraintTop_toTopOf="@id/output_img" />

        <ImageView
            android:id="@+id/output_img"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="12dp"
            android:onClick="@{()->vm.showSlide(1)}"
            android:scaleType="fitCenter"
            app:bitmap="@{vm.concealPercentage.data}"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/input_img"
            app:layout_constraintTop_toBottomOf="@id/txt_title"
            tools:src="@mipmap/ic_launcher"
            tools:visibility="invisible" />

        <ir.mrahimy.conceal.cv.CameraCorner
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:isGone="@{!vm.isInputHintVisible}"
            app:layout_constraintBottom_toBottomOf="@id/input_img"
            app:layout_constraintEnd_toEndOf="@id/input_img"
            app:layout_constraintStart_toStartOf="@id/input_img"
            app:layout_constraintTop_toTopOf="@id/input_img" />

        <TextView
            android:id="@+id/input_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/choose"
            app:isGone="@{!vm.isInputHintVisible}"
            app:layout_constraintBottom_toBottomOf="@id/input_img"
            app:layout_constraintEnd_toEndOf="@id/input_img"
            app:layout_constraintStart_toStartOf="@id/input_img" />

        <ImageView
            android:id="@+id/input_placeholder"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/image"
            app:isGone="@{!vm.isInputHintVisible}"
            app:layout_constraintBottom_toTopOf="@id/input_label"
            app:layout_constraintEnd_toEndOf="@id/input_img"
            app:layout_constraintStart_toStartOf="@id/input_img"
            app:layout_constraintTop_toTopOf="@id/input_img" />

        <ImageView
            android:id="@+id/input_img"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="12dp"
            android:onClick="@{()->vm.showSlide(0)}"
            android:scaleType="fitCenter"
            app:bitmap="@{vm.inputImage}"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toStartOf="@id/output_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_title"
            tools:src="@mipmap/ic_launcher"
            tools:visibility="invisible" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:isVisible="@{vm.isInputImageLoading}"
            app:layout_constraintBottom_toBottomOf="@id/input_img"
            app:layout_constraintEnd_toEndOf="@id/input_img"
            app:layout_constraintStart_toStartOf="@id/input_img"
            app:layout_constraintTop_toTopOf="@id/input_img" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{()->vm.chooseImage()}"
            app:layout_constraintBottom_toBottomOf="@id/input_img"
            app:layout_constraintEnd_toEndOf="@id/input_img"
            app:layout_constraintStart_toStartOf="@id/input_img"
            app:layout_constraintTop_toTopOf="@id/input_img" />

        <ImageView
            android:id="@+id/wav_file_icon"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{()->vm.chooseAudio()}"
            android:src="@drawable/wav"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/output_img" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/arrow_up_float"
            app:layout_constraintBottom_toBottomOf="@id/input_img"
            app:layout_constraintEnd_toStartOf="@id/output_img"
            app:layout_constraintStart_toEndOf="@id/input_img"
            app:layout_constraintTop_toTopOf="@id/input_img" />

        <TextView
            android:id="@+id/wav_file_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:onClick="@{()->vm.chooseAudio()}"
            android:text="@{vm.waveFileLabel}"
            app:layout_constraintBottom_toBottomOf="@id/wav_file_icon"
            app:layout_constraintEnd_toStartOf="@id/wav_file_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/wav_file_icon" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:isVisible="@{vm.isInputWaveLoading}"
            app:layout_constraintBottom_toBottomOf="@id/wav_file_icon"
            app:layout_constraintEnd_toStartOf="@id/wav_file_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/wav_file_icon" />

        <ImageView
            android:id="@+id/btn_record"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{()->vm.startRecording()}"
            android:padding="8dp"
            app:drawableCompat="@{vm.recordingIcon}"
            app:isTooltipAnimated="@{true}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tooltip="@{vm.showRecordTooltip}"
            app:transparentOverlay="@{false}"
            tools:src="@android:drawable/presence_audio_busy" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recordings_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:data="@{vm.recordings}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/btn_record"
            app:layout_constraintTop_toBottomOf="@id/wav_file_icon"
            tools:listitem="@layout/item_recording" />

        <TextView
            android:id="@+id/percentage"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:background="#7111"
            android:gravity="center"
            android:layoutDirection="ltr"
            android:text="@{@string/percentage_persian_placeholder(vm.concealPercentage.percent)}"
            android:textColor="#fff"
            app:isVisible="@{vm.isPercentageVisible}"
            app:layout_constraintBottom_toBottomOf="@id/output_img"
            app:layout_constraintEnd_toEndOf="@id/output_img"
            app:layout_constraintStart_toStartOf="@id/output_img"
            tools:text="100 %" />

        <ImageView
            android:id="@+id/percentage_done"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:gravity="center_horizontal"
            android:layoutDirection="ltr"
            android:src="@drawable/ic_checkmark_green"
            app:isVisible="@{vm.isDoneMarkVisible}"
            app:layout_constraintBottom_toBottomOf="@id/output_img"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toEndOf="@id/output_img"
            app:layout_constraintStart_toStartOf="@id/output_img"
            tools:text="100 %" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{``+vm.handle}"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!--        <ProgressBar-->
        <!--            android:id="@+id/determinateBar"-->
        <!--            style="@android:style/Widget.ProgressBar.Horizontal"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:progress="@{vm.percentInt}"-->
        <!--            app:layout_constraintBottom_toBottomOf="@id/output_img"-->
        <!--            app:layout_constraintEnd_toEndOf="@id/output_img"-->
        <!--            app:layout_constraintStart_toStartOf="@id/output_img" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>